/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.deviceprovider.ddmlib.proto;

import "google/protobuf/any.proto";

option java_package = 'com.android.tools.utp.plugins.deviceprovider.ddmlib.proto';
option java_outer_classname = 'AndroidDeviceProviderDdmlibConfigProto';

// A configuration of DdmlibAndroidDeviceProvider plugin.
message DdmlibAndroidDeviceProviderConfig {
    // Provides configuration values for the local android device provider.
    // Message must be com.google.testing.platform.proto.api.config.LocalAndroidDeviceProviderProto.LocalAndroidDeviceProvider.
    google.protobuf.Any local_android_device_provider_config = 1;

    // DdmlibAndroidDeviceProvider uninstalls APKs on the device when an installation failure
    // occurs due to incompatible APKs such as INSTALL_FAILED_UPDATE_INCOMPATIBLE,
    // INCONSISTENT_CERTIFICATES, etc.
    bool uninstall_incompatible_apks = 2;
}
